@@ -21,7 +21,13 @@ Cache Systems
 
 .. autoclass:: MemcachedCache
 
-.. autoclass:: GAEMemcachedCache
+.. class:: GAEMemcachedCache
+
+   This class is deprecated in favour of :class:`MemcachedCache` which
+   now supports Google Appengine as well.
+
+   .. versionchanged:: 0.8
+      Deprecated in favour of :class:`MemcachedCache`.
 
 .. autoclass:: RedisCache
 
